--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "illuminate/support": "^8.0 | ^9.0"
+        "illuminate/support": "^8.0 | ^9.0 | ^10.0"
     },
     "require-dev": {
         "orchestra/testbench": "^6.6"
